--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     build:
       context: /home/ubuntu/Nextdockerapp/nextdockerapp/
       dockerfile: Dockerfile
+    restart: always
     volumes:
       - /home/ubuntu/Nextdockerapp/nextdockerapp/:/usr/src/app
       - /usr/src/app/node_modules
